# rotten-apple

./: .gitignore  Cargo.toml  ROADMAP.md
.github/workflows/: README.md  ci.yml
archive/python-prototype/: README.md  rotten-apple  runner.py  test_lifter.py
archive/python-prototype/orchestrator/: manifest.py
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs  reconcile.rs  refuse.rs  truth.rs  wanted.rs
crates/backend/: Cargo.toml
crates/backend-xen/: Cargo.toml  build.rs  wrapper.h
crates/backend-xen/src/: backend.rs  compat.rs  config.rs  ctx.rs  lib.rs  mode.rs
crates/backend/src/: lib.rs
crates/bootstrapper/: Cargo.toml
crates/bootstrapper/src/: autowire.rs  boot_mode.rs  lib.rs  thin_dom0.rs  thin_dom0_efi.rs  thin_dom0_grub.rs  thin_dom0_manifest.rs  thin_dom0_rootfs.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cockpit/: Cargo.toml
crates/cockpit/src/: daemon_client.rs  lib.rs  widgets.rs
crates/cockpit/tests/: daemon_client_handshake.rs
crates/detect/: Cargo.toml
crates/detect/examples/: gpu_probe.rs
crates/detect/src/: gpu.rs  host_specs.rs  lib.rs  lift_readiness.rs  planner.rs  topology.rs
crates/dom0-memd/: Cargo.toml
crates/dom0-memd/src/: lib.rs
crates/fabric/: Cargo.toml
crates/fabric/src/: chain.rs  config.rs  event.rs  keypair.rs  lib.rs  node_id.rs  transport.rs
crates/images/: Cargo.toml
crates/images/src/: lib.rs
crates/images/tests/: pull_e2e.rs
crates/instances/: Cargo.toml
crates/instances/src/: lib.rs
crates/instances/tests/: lifecycle.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: lib.rs
crates/manifest/tests/: load_examples.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs  main.rs  protocol.rs  upstream.rs
crates/mcp-server/tests/: end_to_end.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs  main.rs
crates/orchestratord/: Cargo.toml
crates/orchestratord/src/: actor.rs  auth.rs  dispatch.rs  engine.rs  lib.rs  main.rs  oneshot.rs  protocol.rs  transport.rs
crates/orchestratord/tests/: dispatch.rs  engine.rs  handshake.rs
design/: architecture.md  backend-trait.md
manifests/: icloud-keychain.example.toml  this-machine-ubuntu-domu.toml  ubuntu-desktop.example.toml
scripts/: simulate_thindom0_qemu.sh
