[workspace]
resolver = "3"
members = [
    "crates/manifest",
    "crates/backend",
    "crates/detect",
    "crates/cli",
    "crates/backend-xen",
    "crates/orchestrator",
    "crates/orchestratord",
    "crates/bootstrapper",
    "crates/cockpit",
    "crates/mcp-server",
    "crates/images",
    "crates/instances",
    "crates/fabric",
    "crates/agent",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["rotten-apple contributors"]
repository = "https://github.com/rotten-apple/rotten-apple"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
# Fabric (Phase 1 mesh) deps. ed25519-dalek + sha2 + hex give us the
# signed-event chain; rand_core (re-export from ed25519-dalek's
# `rand_core` feature) supplies keypair generation. No async deps —
# the chain is pure functions; transport is std::net.
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
rand_core = { version = "0.6", features = ["std"] }
