[package]
name = "rotten-apple-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde                 = { workspace = true }
toml                  = { workspace = true }
rotten-apple-manifest = { path = "../manifest" }
rotten-apple-fabric   = { path = "../fabric" }
