[package]
name = "rotten-apple-cockpit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "rotten-apple cockpit — TUI control surface. Talks to the HypervisorBackend trait directly; runs locally on dom0 (sudo) or over SSH."

[lib]
path = "src/lib.rs"

[dependencies]
rotten-apple-backend       = { path = "../backend" }
rotten-apple-backend-xen   = { path = "../backend-xen" }
rotten-apple-bootstrapper  = { path = "../bootstrapper" }
rotten-apple-detect        = { path = "../detect" }
rotten-apple-manifest      = { path = "../manifest" }
rotten-apple-orchestratord = { path = "../orchestratord" }
rotten-apple-instances     = { path = "../instances" }
rotten-apple-images        = { path = "../images" }
ratatui    = "0.29"
crossterm  = "0.28"
libc       = "0.2"
serde_json = "1"
