[package]
name = "rotten-apple-fabric"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde         = { workspace = true }
toml          = { workspace = true }
ed25519-dalek = { workspace = true }
sha2          = { workspace = true }
hex           = { workspace = true }
rand_core     = { workspace = true }
serde_json    = "1"

[dev-dependencies]
tempfile = "3"
