[package]
name = "rotten-apple-images"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "rotten-apple image catalog — pull cloud images, register, hash-verify."

[lib]
path = "src/lib.rs"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
sha2       = "0.10"

[dev-dependencies]
tempfile = "3"
