[package]
name = "rotten-apple-instances"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "rotten-apple instances — CoW overlays on base images, profile generation, domain.create dispatch."

[lib]
path = "src/lib.rs"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
rotten-apple-manifest      = { path = "../manifest" }
rotten-apple-orchestratord = { path = "../orchestratord" }
