[package]
name = "rotten-apple-orchestratord"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "rotten-apple orchestratord — single libxl owner, JSON-RPC over Unix socket"

[[bin]]
name = "rotten-apple-orchestratord"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
serde      = { workspace = true }
serde_json = "1"
libc       = "0.2"
hex        = "0.4"
rotten-apple-manifest    = { path = "../manifest" }
rotten-apple-backend     = { path = "../backend" }
rotten-apple-backend-xen = { path = "../backend-xen" }
rotten-apple-fabric      = { path = "../fabric" }
